<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="webflow_header">Microsoft account</string>
    <string name="authentication_button_previous">previous</string>
    <string name="authentication_button_next">next</string>
    <string name="authentication_button_finish">finish</string>
    <string name="app_market">en-US</string>
    <string name="user_tile_image_content_description">"The user's image."</string>
    <string name="account_menu_add_account">Add an account</string>
    <string name="account_picker_menu_dismiss">Close</string>
    <string name="account_picker_list_header">Choose one</string>
    <string name="account_picker_list_body">Which account do you want to sign in to this app with?</string>
    <string name="sign_out_dialog_title">Do you want to sign out of this app?</string>
    <string name="sign_out_dialog_checkbox">Sign out of all Microsoft apps using %1$s</string>
    <string name="sign_out_dialog_button_sign_out">Sign out</string>
    <string name="sign_out_dialog_button_cancel">Cancel</string>
    <string name="account_setting_up_header">"You're almost done"</string>
    <string name="account_setting_up">Please wait while we finish adding your account.</string>
    <string name="error_header_generic_failure">Something went wrong</string>
    <string name="error_body_generic_failure">Please try again.</string>
    <string name="error_overlay_no_network">You have no internet connection</string>
    <string name="error_header_server_network_error">We are having problems connecting to the server</string>
    <string name="sdk_version_name">2.1.0369.0928</string>
    <string name="xbid_ban_error_header">Hi, %1$s.</string>
    <string name="xbid_ban_error_body_android">"We can't sign you in because your account has been suspended from Xbox Live."</string>
    <string name="xbid_creation_error_android">"Sorry, we couldn't complete your Xbox profile. If it happens again, try setting it up at &lt;u>Xbox.com&lt;/u>"</string>
    <string name="xbid_catchall_error_android">Sorry, something went wrong. Get it another try, or try on &lt;u>Xbox.com&lt;/u></string>
    <string name="xbid_error_offline_android">"Make sure you're online, then try again. We can't connect right now."</string>
    <string name="xbid_close">Close</string>
    <string name="xbid_try_again">Try again</string>
    <string name="xbid_more_info">More info</string>
    <string name="xbid_sing_up_header">Welcome to Xbox</string>
    <string name="xbid_sing_up_subheader_android">"Here's your name on Xbox (or \"gamertag\"). Change it if you want!"</string>
    <string name="xbid_gamertag_placeholder">Gamertag</string>
    <string name="xbid_privacy_settings_header_android">Privacy settings: %1$s</string>
    <string name="xbid_age_group_adult">Adult default</string>
    <string name="xbid_age_group_teen">Teen default</string>
    <string name="xbid_age_group_child">Child default</string>
    <string name="xbid_age_group_adult_details_android">"Your friends and their friends can see if you're online, your game clips, and your recent apps and games. You can change these on &lt;u>Xbox.com&lt;u>"</string>
    <string name="xbid_age_group_teen_details_android">"Your Xbox friends and their friends can see your real name and your profile. Your Xbox friends can see if you're online, your game clips, and your recent apps and games"</string>
    <string name="xbid_age_group_child_details_android">"Your Xbox friends can see your profile, but not your real name. Friends and their friends can see if you're online and available to play, but you'll need a parent's permission to add friends"</string>
    <string name="xbid_next">Next</string>
    <string name="xbid_another_gamertag">Already have a gamertag?</string>
    <string name="xbid_another_sign_in">Sign in with a different Microsoft account</string>
    <string name="xbid_gamertag_check_availability">Check availability</string>
    <string name="xbid_gamertag_not_available_android">"That's taken. How about:"</string>
    <string name="xbid_gamertag_checking_android">Checking…</string>
    <string name="xbid_gamertag_available">Available!</string>
    <string name="xbid_gamertag_checking_error">An error occurred. Try again?</string>
    <string name="xbid_welcome_back">Welcome back!</string>
    <string name="xbid_customize_profile">You can customize you profile in the Xbox app</string>
    <string name="xbid_lets_play_android">"Let's play"</string>
    <string name="xbid_different_gamer_tag_answer">Sign in with that account</string>
    <string name="xbid_introducing_android">Introducing…</string>
    <string name="xbid_tools_gamertag">MasterChef</string>
    <string name="xbid_tools_user_name">John Smith</string>
    <string name="xbid_tools_email">mhdmkjhkhkjrrr343@gmail.com</string>
    <string name="xbid_tools_empty" />
    <string name="xbid_gamertag_not_available_no_suggestions_android">"That's taken."</string>
    <string name="xbid_first_and_last_name_android">%1$s %2$s</string>
    <string name="app_name">Craftsman Improved</string>
    <string name="app_name_demo">Craftsman Improved</string>
    <string name="xperiaplayoptimized_content">true</string>
    <string name="app_name_short">Craftsman+</string>
    <string name="app_name_short_demo">Craftsman+</string>
</resources>
